# azure-iot-sdk-c

./: .gitmodules  CMakeLists.txt  package.xml
iothub_client/: CMakeLists.txt
iothub_client/inc/: iothub_client_options.h
iothub_client/inc/internal/: iothub_internal_consts.h
iothub_client/samples/: CMakeLists.txt  readme.md
iothub_client/samples/iothub_client_device_twin_and_methods_cbor_sample/: CMakeLists.txt  iothub_client_device_twin_and_methods_cbor_sample.c  readme.md
iothub_client/samples/iothub_client_device_twin_and_methods_sample/: CMakeLists.txt  iothub_client_device_twin_and_methods_sample.c
iothub_client/src/: iothubtransport_mqtt_common.c
iothub_client/tests/common_dt_e2e/: iothubclient_common_dt_e2e.c  iothubclient_common_dt_e2e.h
iothub_client/tests/iothubclient_mqtt_dt_e2e/: iothubclient_mqtt_dt_e2e.c
