#Copyright (c) Microsoft. All rights reserved.
#Licensed under the MIT license. See LICENSE file in the project root for full license information.

if(NOT ${use_mqtt})
    message(FATAL_ERROR "iothub_client_device_twin_and_methods_cbor_sample being generated without MQTT support")
endif()

compileAsC99()

IF(WIN32)
    #windows needs this define
    add_definitions(-D_CRT_SECURE_NO_WARNINGS)
    add_definitions(-DGB_MEASURE_MEMORY_FOR_THIS -DGB_DEBUG_ALLOC)
ENDIF(WIN32)

# Sample Executable
set(iothub_client_device_twin_and_methods_cbor_sample_c_files
    iothub_client_device_twin_and_methods_cbor_sample.c
)

if(${use_sample_trusted_cert})
    add_definitions(-DSET_TRUSTED_CERT_IN_SAMPLES)
    include_directories(${PROJECT_SOURCE_DIR}/certs)
    set(iothub_client_device_twin_and_methods_cbor_sample_c_files ${iothub_client_device_twin_and_methods_cbor_sample_c_files}
        ${PROJECT_SOURCE_DIR}/certs/certs.c)
endif()

add_executable(iothub_client_device_twin_and_methods_cbor_sample
    ${iothub_client_device_twin_and_methods_cbor_sample_c_files}
)

target_link_libraries(iothub_client_device_twin_and_methods_cbor_sample
    iothub_client
)

# Tinycbor Library
find_library(tinycbor tinycbor
    PATHS $ENV{Path}                #Windows
    PATH_SUFFIXES tinycbor/lib lib  #Windows
)
target_link_libraries(iothub_client_device_twin_and_methods_cbor_sample ${tinycbor})

find_path(TINYCBOR_INCLUDE_DIR cbor.h
    PATHS
        /usr/local/include  #Linux
        $ENV{Path}          #Windows
    PATH_SUFFIXES
        tinycbor            #Linux
        tinycbor/src src    #Windows
)
include_directories(${TINYCBOR_INCLUDE_DIR})
